--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="portfolio-item">
                         <img src="https://via.placeholder.com/250x260" alt="Poster for a private mixology event">
                         <div class="portfolio-caption">
-                            Poster for a private mixology event
+                          StudentGator Website 
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     <div class="portfolio-item">
                         <img src="https://via.placeholder.com/250x260" alt="Flyer for a private graduation party">
                         <div class="portfolio-caption">
-                            Flyer for a private graduation party
+                          Couponak Website
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <div class="portfolio-item">
                         <img src="https://via.placeholder.com/250x260" alt="Flyer for a mixology event">
                         <div class="portfolio-caption">
-                            Flyer for a mixology event
+                          Ship to Egypt Website
                         </div>
                     </div>
                 </div>
