remove work section

--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
   <title>Portfolio</title>
 </head>
 <body>
-    
   <div class="portfolio-section">
     <div class="row">
       <div class="col-md-6 d-flex flex-column align-items-center text-center justify-content-center">
-        <img src="assets/images/Aya-profile.jpg" alt="Profile Image" class="profile-image mb-3">
+        <img src="assets/images/Aya-profile.jpg" alt="Aya-profile" class="profile-image mb-3">
         <h1 class="fw-bold">Aya Fikry</h1>
         <h4 class="fw-bold">(she/her)</h4>
         <p class="text-muted">Frontend Developer</p>
         <a href="mailto:ayafikry33@gmail.com" class="btn btn-custom pop-on-hover">Email me</a>
         <div class="social-icons mt-3">
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-twitter"></i></a>
-          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="https://github.com/AyaFikry33/"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/ayafikry33/"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
@@ -29,9 +26,9 @@
       <div class="col-md-6 about-me-section d-flex flex-column justify-content-center">
         <h3 class="title">About Me</h3>
         <p>
-            Hi, I'm Aya Fikry, a Frontend Developer with over 3 years of experience specializing in Angular and modern web technologies. 
-            I've worked on government and commercial projects across Egypt, the UAE, and France, delivering scalable, efficient web applications. 
-            I'm passionate about building great user experiences and continuously learning to improve my skills.
+          Hi, I'm Aya Fikry, a Frontend Developer with over 3 years of experience specializing in Angular and modern web technologies. 
+          I've worked on government and commercial projects across Egypt, the UAE, and France, delivering scalable, efficient web applications. 
+          I'm passionate about building great user experiences and continuously learning to improve my skills.
         </p>
         <div class="d-flex justify-content-between btn-container">
           <a href="assets/images/Aya-Frontend-Developer.pdf" class="btn btn-custom pop-on-hover me-2" download="Aya-Frontend-Developer.pdf">Resume</a>
@@ -40,46 +37,8 @@
       </div>
     </div>
   </div>
+    
 
-      <!-- Portfolio Section -->
-      <section class="work-section">
-        <div class="container">
-            <h2 class="work-title">Samples of My Work</h2>
-
-            <!-- Portfolio Items Row -->
-            <div class="row justify-content-center">
-                <!-- Portfolio Item 1 -->
-                <div class="col-md-4">
-                    <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/250x260" alt="Poster for a private mixology event">
-                        <div class="portfolio-caption">
-                            Poster for a private mixology event
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 2 -->
-                <div class="col-md-4">
-                    <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/250x260" alt="Flyer for a private graduation party">
-                        <div class="portfolio-caption">
-                            Flyer for a private graduation party
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Portfolio Item 3 -->
-                <div class="col-md-4">
-                    <div class="portfolio-item">
-                        <img src="https://via.placeholder.com/250x260" alt="Flyer for a mixology event">
-                        <div class="portfolio-caption">
-                            Flyer for a mixology event
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
   <script src="node_modules/@popperjs/core/dist/umd/popper-base.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
